adding more country paris itali vigas

--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,13 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#paris {
+    background-color: #00cec9;
+}
+#vigas {
+    background-color: #00b894;
+}
+#itali {
+    background-color: #e74c3c;
+}
